--- a/package.json
+++ b/package.json
@@ -8,10 +8,18 @@
         "type": "git",
         "url": "https://github.com/qor/qor.git"
     },
-    "keywords": ["qor", "cms", "go"],
+    "keywords": [
+        "qor",
+        "cms",
+        "go"
+    ],
     "devDependencies": {
         "@babel/core": "^7.3.4",
         "@babel/preset-env": "^7.3.4",
         "gulp-babel": "8.0.0"
+    },
+    "dependencies": {
+        "gulp": "^4.0.2",
+        "yarn": "^1.19.1"
     }
 }
